--- a/product-webapp/webapp/src/app/components/sos-request/sos-request.component.html
+++ b/product-webapp/webapp/src/app/components/sos-request/sos-request.component.html
@@ -62,15 +62,18 @@
             Hospitalized
           </label>
         </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
-          <label class="form-check-label" for="flexRadioDefault2">
-            Not Hospitalized
-          </label>
-        </div>
+      </div>
+      <div class="col-sm-10">
+      <div class="form-check">
+        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+        <label class="form-check-label" for="flexRadioDefault2">
+          Not Hospitalized
+        </label>
       </div>
     </div>
-    <button type="button" class="btn btn-primary btn-lg">Submit</button>
+
+    </div>
+    <button type="button" class="btn btn-primary btn-lg" (click)="Create()">Submit</button>
   </div>
 </body>
 </html>
