added address, contactPerson, mobileNumber

--- a/product-webapp/webapp/src/app/components/add-medicine/add-medicine.component.html
+++ b/product-webapp/webapp/src/app/components/add-medicine/add-medicine.component.html
@@ -15,6 +15,18 @@
         <label for="id">City</label>
         <input [(ngModel)]="user.city" placeholder="City Name" name="City Name" class="form-control" id="medicineid">
       </div>
+      <div class="form-group">
+        <label for="name">Address:</label>
+        <input type="name" [(ngModel)]="user.address" placeholder="Address" name="address" class="form-control" id="address">
+      </div>
+      <div class="form-group">
+        <label for="name">Contact Person:</label>
+        <input type="name" [(ngModel)]="user.contactPerson" placeholder="Contact Person" name="contactPerson" class="form-control" id="contactPerson">
+      </div>
+      <div class="form-group">
+        <label for="name">Mobile Number:</label>
+        <input type="name" [(ngModel)]="user.mobileNumber" placeholder="Mobile Number" name="mobileNumber" class="form-control" id="mobileNumber">
+      </div>
     
       <button class="btn btn-success" (click)="CreateMedicine()">Submit</button>
     </form>
