--- a/product-webapp/webapp/src/app/components/update-medicine/update-medicine.component.html
+++ b/product-webapp/webapp/src/app/components/update-medicine/update-medicine.component.html
@@ -13,7 +13,7 @@
     
       <div class="form-group">
         <label for="id">City</label>
-        <input [(ngModel)]="user.city" placeholder="City Name" name="City Name" class="form-control" id="medicineid">
+        <input [(ngModel)]="user.city" placeholder="City Name" name="city" class="form-control" id="medicineid">
       </div>
       <div class="form-group">
         <label for="name">Address:</label>
