--- a/product-webapp/webapp/src/app/components/patient-otp/patient-otp.component.html
+++ b/product-webapp/webapp/src/app/components/patient-otp/patient-otp.component.html
@@ -1,1 +1,6 @@
-<p>patient-otp works!</p>
+<!-- <h2 class="text-center">Add Employee</h2>
+    <form>
+      <div class="form-group">
+        <label for="email">E-Mail:</label>
+        <input type="email" [(ngModel)]="user.email" placeholder="Email" name="email" class="form-control" id="email">
+      </div> -->
