--- a/product-webapp/webapp/src/app/app.component.html
+++ b/product-webapp/webapp/src/app/app.component.html
@@ -1,3 +1,3 @@
 <h1 class = 'container-fluid text-center'> Project Kawach </h1>
-
+<a routerLink="landingpage">Landing Page</a>
 <router-outlet></router-outlet>
