--- a/product-webapp/webapp/src/app/components/add-bed/add-bed.component.html
+++ b/product-webapp/webapp/src/app/components/add-bed/add-bed.component.html
@@ -1,14 +1,9 @@
 <div class="col-md-6">
-    <h2 class="text-center">Add Equipment</h2>
+    <h2 class="text-center">Add Bed</h2>
     <form>
       <div class="form-group">
-        <label for="name">Equipment Name:</label>
-        <input type="name" [(ngModel)]="user.equipmentName" placeholder="Equipment Name" name="name" class="form-control" id="equipmentName">
-      </div>
-    
-      <div class="form-group">
-        <label for="hospital">Hospital:</label>
-        <input [(ngModel)]="user.hospital" placeholder="Hospital" name="hospital" class="form-control" id="hospital">
+        <label for="name">Bed Type:</label>
+        <input type="name" [(ngModel)]="user.typeName" placeholder="Bed Type" name="name" class="form-control" id="typeName">
       </div>
     
       <div class="form-group">
@@ -28,6 +23,6 @@
         <input type="name" [(ngModel)]="user.mobileNumber" placeholder="Mobile Number" name="mobileNumber" class="form-control" id="mobileNumber">
       </div>
     
-      <button class="btn btn-success" (click)="CreateEquipment()">Submit</button>
+      <button class="btn btn-success" (click)="CreateMedicine()">Submit</button>
     </form>
     </div>
