--- a/product-webapp/webapp/src/app/components/add-bed/add-bed.component.html
+++ b/product-webapp/webapp/src/app/components/add-bed/add-bed.component.html
@@ -23,6 +23,6 @@
         <input type="name" [(ngModel)]="user.mobileNumber" placeholder="Mobile Number" name="mobileNumber" class="form-control" id="mobileNumber">
       </div>
     
-      <button class="btn btn-success" (click)="CreateMedicine()">Submit</button>
+      <button class="btn btn-success" (click)="CreateBed()">Submit</button>
     </form>
     </div>
