--- a/product-webapp/webapp/src/app/components/warroom-dashboard/warroom-dashboard.component.html
+++ b/product-webapp/webapp/src/app/components/warroom-dashboard/warroom-dashboard.component.html
@@ -1,1 +1,16 @@
-<p>warroom-dashboard works!</p>
+<div class="buttons">
+    <div class="action_btn">  
+        <button class="btn btn-md btn-primary btn-style"> SOS</button>  
+    </div> 
+    <div class="action_btn">  
+        <button class="btn btn-md btn-primary btn-style"> Verification</button>  
+    </div> 
+    <div class="action_btn">  
+        <button class="btn btn-md btn-primary btn-style" > Add Resources</button>  
+    </div>
+</div> 
+
+<br>
+<br><app-add-medicine></app-add-medicine>
+
+
