war room dash implementation

--- a/product-webapp/webapp/src/app/components/warroom-dashboard/warroom-dashboard.component.html
+++ b/product-webapp/webapp/src/app/components/warroom-dashboard/warroom-dashboard.component.html
@@ -1,12 +1,32 @@
 <div class="buttons">
     <div class="action_btn">  
-        <button class="btn btn-md btn-primary btn-style"> SOS</button>  
+        <button class="btn btn-md btn-primary btn-style" (click)="routeTo('sos')"> SOS</button>  
     </div> 
     <div class="action_btn">  
-        <button class="btn btn-md btn-primary btn-style"> Verification</button>  
+        <button class="btn btn-md btn-primary btn-style" (click)="routeTo('Verification')"> Verification</button>  
     </div> 
     <div class="action_btn">  
         <button class="btn btn-md btn-primary btn-style" > Add Resources</button>  
+    </div>
+</div> 
+
+<br>
+<br>
+<br>
+<div class="buttons">
+    <div class="action_btn">  
+        <button class="btn btn-md btn-primary btn-style" (click)="routeTo('Medicine')"> Medicine</button>  
+    </div> 
+    <br>
+    <br><br>
+    <div class="action_btn">  
+        <button class="btn btn-md btn-primary btn-style" (click)="routeTo('Equipment')"> Medical Equipment</button>  
+    </div> 
+    <br>
+    <br>
+    <br>
+    <div class="action_btn">  
+        <button class="btn btn-md btn-primary btn-style" (click)="routeTo('Bed')"> Bed</button>  
     </div>
 </div> 
 
