--- a/product-webapp/webapp/src/app/components/warroom-dashboard/warroom-dashboard.component.css
+++ b/product-webapp/webapp/src/app/components/warroom-dashboard/warroom-dashboard.component.css
@@ -1,9 +1,11 @@
 .buttons {
     width: 200px;
     margin-right: 20px;
+    margin-bottom: 30px;
     display: inline;}
     
         .action_btn {
     width: 200px;
     margin-right: 20px;
+    margin-bottom: 30px;
     display: inline;}
