--- a/product-webapp/webapp/src/app/components/sos-request/sos-request.component.html
+++ b/product-webapp/webapp/src/app/components/sos-request/sos-request.component.html
@@ -8,72 +8,67 @@
 </head>
 <body>
   <div class='container' padding-top='20rem'>
-    <div class="mb-3 row">
-      <label for="inputPassword" class="col-sm-2 col-form-label">Name</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control" id="inputPassword">
-      </div>
-    </div>
-    <div class="mb-3 row">
-      <label for="inputPassword" class="col-sm-2 col-form-label">Phone Number</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control" id="inputPassword">
-      </div>
-    </div>
-    <div class="mb-3 row">
-      <label for="inputPassword" class="col-sm-2 col-form-label">Email</label>
-      <div class="col-sm-10">
-        <input type="email" class="form-control" id="inputPassword">
-      </div>
-    </div>
-    <div class="mb-3 row">
-      <label for="inputPassword" class="col-sm-2 col-form-label">City</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control" id="inputPassword">
-      </div>
-    </div>
-    <div>
-      <label for="formFileLg" class="form-label">Upload Your Prescription Here</label>
-      <input class="form-control form-control-lg" id="formFileLg" type="file">
-    </div>
-    <div class="mb-3 row">
-      <label for="inputPassword" class="col-sm-2 col-form-label">Gender</label>
-      <div class="col-sm-10">
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-          <label class="form-check-label" for="flexRadioDefault1">
-            Male
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
-          <label class="form-check-label" for="flexRadioDefault2">
-            Female
-          </label>
-        </div>
-      </div>
-    </div>
-    <div class="mb-3 row">
-      <label for="inputPassword" class="col-sm-2 col-form-label">Hospitalized Status</label>
-      <div class="col-sm-10">
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-          <label class="form-check-label" for="flexRadioDefault1">
-            Hospitalized
-          </label>
-        </div>
-      </div>
-      <div class="col-sm-10">
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
-        <label class="form-check-label" for="flexRadioDefault2">
-          Not Hospitalized
-        </label>
-      </div>
+    <div class="form-group">
+      <label for="name">Paitent Name:</label>
+      <input type="name" [(ngModel)]="user.patientName" placeholder="Name" name="name" class="form-control" id="name">
     </div>
 
+    <div class="form-group">
+      <label for="name">Phone Number:</label>
+      <input type="name" [(ngModel)]="user.phoneNo" placeholder="Phone Number" name="name" class="form-control" id="name">
     </div>
-    <button type="button" class="btn btn-primary btn-lg" (click)="Create()">Submit</button>
+
+    <div class="form-group">
+      <label for="name">Email id.:</label>
+      <input type="email" [(ngModel)]="user.email" placeholder="Email id." name="name" class="form-control" id="name">
+    </div>
+
+    <div class="form-group">
+      <label for="name">City:</label>
+      <input type="name" [(ngModel)]="user.city" placeholder="City" name="name" class="form-control" id="name">
+    </div>
+
+    <div class="form-group">
+      <label for="name">Gender:</label>
+      <select class="form-select" [(ngModel)]="user.gender" aria-label="Default select example">
+        <option value="1">Male</option>
+        <option value="2">Female</option>
+      </select>
+    </div>
+
+    <div class="form-group">
+      <label for="name">Hospitalised status:</label>
+      <select class="form-select" [(ngModel)]="user.hospitalised" aria-label="Default select example">
+        <option value="1">Hospitalised</option>
+        <option value="2">Not Hospitalised</option>
+      </select>
+    </div>
+
+    <div class="form-group">
+      <label for="name">Requrement Name:</label>
+      <input type="name" [(ngModel)]="user.requirementName" placeholder="Name" name="name" class="form-control" id="name">
+    </div>
+
+    <div class="form-group">
+      <label for="name">Requrement Quantity:</label>
+      <input type="name" [(ngModel)]="user.requirementQuantity" placeholder="Name" name="name" class="form-control" id="name">
+    </div>
+
+    <div class="form-group">
+      <label for="name">Unit of Mesures:</label>
+      <input type="name" [(ngModel)]="user.unitOfMeasure" placeholder="Name" name="name" class="form-control" id="name">
+    </div>
+
+    <div class="form-group">
+      <label for="name">Request status:</label>
+      <select class="form-select" [(ngModel)]="user.requestStatus" aria-label="Default select example">
+        <option value="1">Open</option>
+        <option value="2">Close</option>
+      </select>
+    </div>
+
+
+    <button type="button" class="btn btn-primary btn-lg" style="margin-top: 40px;" (click)="Create()">Submit</button>
   </div>
 </body>
 </html>
