--- a/product-webapp/webapp/src/app/components/list-bed/list-bed.component.html
+++ b/product-webapp/webapp/src/app/components/list-bed/list-bed.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <h2>List Beds... </h2>
 <div class="col-md-6">
     <table class="table table-striped">
@@ -21,4 +22,5 @@
             </tr>
         </tbody>
     </table>
+</div>
 </div>
