--- a/product-webapp/webapp/src/app/app.component.html
+++ b/product-webapp/webapp/src/app/app.component.html
@@ -1,3 +1,10 @@
-<h1 class = 'container-fluid text-center'> Project Kawach </h1>
+
+<br><div class="container">
+      <button type="button" class="btn btn-outline-primary" routerLink="doctorregistration">Doctor Register</button>&nbsp;
+      <button type="button" class="btn btn-outline-primary" routerLink="volunteerregistration">Volunteer Register</button>
+      <input type="button" class="btn btn-primary" value="Login" style="float: right;">
+
+    </div>
+    
 
 <router-outlet></router-outlet>
