added docker file

--- a/product-webapp/webapp/src/app/app.component.html
+++ b/product-webapp/webapp/src/app/app.component.html
@@ -1,4 +1,1 @@
-<h1 class = 'container-fluid text-center'> Project Kawach </h1>
-<a routerLink="landingpage">Landing Page</a>
-<router-outlet></router-outlet>
-
+<app-landing-page></app-landing-page>
