bedType and MongoId bug fix

--- a/product-webapp/webapp/src/app/components/add-bed/add-bed.component.html
+++ b/product-webapp/webapp/src/app/components/add-bed/add-bed.component.html
@@ -3,8 +3,8 @@
     <h2 class="text-center">Add Bed</h2>
     <form>
       <div class="form-group">
-        <label for="typeName">Bed Type:</label>
-        <input type="name" [(ngModel)]="user.typeName" placeholder="Bed Type" name="name" class="form-control" id="typeName">
+        <label for="bedType">Bed Type:</label>
+        <input type="name" [(ngModel)]="user.bedType" placeholder="Bed Type" name="bedType" class="form-control" id="bedType">
       </div>
 
       <div class="form-group">
