--- a/product-webapp/webapp/src/app/components/list-bed/list-bed.component.html
+++ b/product-webapp/webapp/src/app/components/list-bed/list-bed.component.html
@@ -13,7 +13,7 @@
         </thead>
         <tbody>
             <tr *ngFor="let bed of beds">
-                <td>{{bed.typeName}}</td>
+                <td>{{bed.bedType}}</td>
                 <td>{{bed.city}}</td>
                 <td>{{bed.address}}</td>
                 <td>{{bed.contactPerson}}</td>
