pulling latest changes

--- a/product-webapp/webapp/src/app/components/landing-page/latest-information/latest-information.component.html
+++ b/product-webapp/webapp/src/app/components/landing-page/latest-information/latest-information.component.html
@@ -1,15 +1,15 @@
 <p>latest-information works!</p>
 <h2>Latest Information... </h2>
 <div class="col-md-6">
-    <table class="table table-striped">
+    <table class="center table table-striped">
         <thead>
             <tr>
                 <th>Loc</th>
-                <th>confirmedCasesIndian</th>
-                <th>confirmedCasesForeign</th>
-                <th>discharged</th>
-                <th>deaths</th>
-                <th>totalConfirmed</th>
+                <th>Confirmed Cases Indian</th>
+                <th>Confirmed Cases Foreign</th>
+                <th>Discharged</th>
+                <th>Deaths</th>
+                <th>Total Confirmed</th>
             </tr>
         </thead>
         <tbody>
