Center alighned landing page

--- a/product-webapp/webapp/src/app/components/landing-page/patient-otp/patient-otp.component.html
+++ b/product-webapp/webapp/src/app/components/landing-page/patient-otp/patient-otp.component.html
@@ -1,25 +1,28 @@
-<h2 class="text-center">Kawach</h2>
+<h1 class="text-center">Join the Pandemic Support</h1>
+<h2 class="text-center">Patient login here</h2>
 
-<div class="col-md-6">
-  <form>
-    <div class="form-group">
-      <label for="email">E-Mail:</label>
-      <input [(ngModel)]="user.email"  placeholder="Email" name="email" class="form-control" id="email">
-    </div>
-   <button class="btn btn-success" (click)="CreatePatient()">Submit</button>
+<div class="container">
+  <div class="col-md-6 container">
+    <form>
+      <div class="form-group">
+        <label for="email">E-Mail:</label>
+        <input [(ngModel)]="user.email"  placeholder="Email" name="email" class="form-control" id="email">
+      </div>
+    <button class="btn btn-success" (click)="CreatePatient()">Submit</button>
+    </form>
+  </div>
+
+  <div *ngIf="message==='SUCCESS'" class="col-md-6 container">
+    <a routerLink="/sos" class="btn btn-info">Verify</a>
+  </div>
+  <div *ngIf="message==='FAIL'">
+    <h2>Entered Otp is NOT valid. Please Retry!</h2>
+  </div>
+
+  <form #userlogin = "ngForm" (ngSubmit) = "onClickSubmit(userlogin.value)" class="col-md-6 container">
+    <input type = "text" name = "otp" placeholder = "otp" ngModel>
+    <br/>
+
+    <input type = "submit" value = "Verfied">
   </form>
 </div>
-
-<div *ngIf="message==='SUCCESS'">
-  <a routerLink="/sos" class="btn btn-info">Verify</a>
-</div>
-<div *ngIf="message==='FAIL'">
-  <h2>Entered Otp is NOT valid. Please Retry!</h2>
-</div>
-
-<form #userlogin = "ngForm" (ngSubmit) = "onClickSubmit(userlogin.value)" >
-  <input type = "text" name = "otp" placeholder = "otp" ngModel>
-  <br/>
-
-  <input type = "submit" value = "Verfied">
-</form>
