--- a/product-webapp/webapp/src/app/components/landing-page/latest-information/latest-information.component.css
+++ b/product-webapp/webapp/src/app/components/landing-page/latest-information/latest-information.component.css
@@ -1,4 +1,7 @@
 .center {
-    margin-left: auto;
-    margin-right: auto;
-  }
+  width: 100%;
+}
+td, th {
+  padding: 5px;
+  text-align:center;    
+}
