--- a/product-webapp/webapp/src/app/components/landing-page/latest-information/latest-information.component.html
+++ b/product-webapp/webapp/src/app/components/landing-page/latest-information/latest-information.component.html
@@ -1,12 +1,11 @@
-<p>latest-information works!</p>
 <h2>Latest Information... </h2>
-<div class="col-md-6">
-    <table class="center table table-striped">
+<div class="col-md-6 container center">
+    <table class="table center table-striped table-hover table-bordered">
         <thead>
             <tr>
-                <th>Loc</th>
-                <th>Confirmed Cases Indian</th>
-                <th>Confirmed Cases Foreign</th>
+                <th>Location</th>
+                <th>Confirmed Cases (Indian)</th>
+                <th>Confirmed Cases (Foreign)</th>
                 <th>Discharged</th>
                 <th>Deaths</th>
                 <th>Total Confirmed</th>
