--- a/product-webapp/webapp/src/app/components/landing-page/landing-page.component.html
+++ b/product-webapp/webapp/src/app/components/landing-page/landing-page.component.html
@@ -1,7 +1,5 @@
-<br><div class="container">
-    <button type="button" class="btn btn-outline-primary" routerLink="doctorregistration">Doctor Register</button>&nbsp;
-    <button type="button" class="btn btn-outline-primary" routerLink="volunteerregistration">Volunteer Register</button>
-    <input type="button" class="btn btn-primary" value="Login" routerLink="/login" style="float: right;">
+<br><div class="container nav justify-content-end">
+    
 </div>
 
 <div class="container">
