--- a/product-webapp/webapp/src/app/components/header/header.component.html
+++ b/product-webapp/webapp/src/app/components/header/header.component.html
@@ -7,7 +7,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <button type="button" class="btn btn-outline-primary" routerLink="">Home</button>&nbsp;
           </li>
           <li class="nav-item">
             <button type="button" class="btn btn-outline-primary" routerLink="doctorregistration">Doctor Register</button>&nbsp;
@@ -15,8 +15,8 @@
           <li class="nav-item">
             <button type="button" class="btn btn-outline-primary" routerLink="volunteerregistration">Volunteer Register</button>
           </li>
-          <li class="nav-item">
-            <input type="button" class="btn btn-primary" value="Login" routerLink="/login" style="float: right;" >
+          <li class="nav-item" style="float: right;">
+            <input type="button" class="btn btn-primary" value="Login" routerLink="/login">
           </li>
         </ul>
       </div>
