--- a/product-webapp/webapp/src/app/components/list-bed/list-bed.component.html
+++ b/product-webapp/webapp/src/app/components/list-bed/list-bed.component.html
@@ -1,24 +1,24 @@
 <div class="container">
-<h2>List Beds... </h2>
+<mat-card><h2>List Beds... </h2></mat-card>
 <div class="col-md-6">
     <table class="table table-striped">
         <thead>
             <tr>
-                <th>Bed Type</th>
-                <th>City</th>
-                <th>Address</th>
-                <th>Contact Person</th>
-                <th>Mobile Number</th>
+                <th><mat-card>Bed Type</mat-card></th>
+                <th><mat-card>City</mat-card></th>
+                <th><mat-card>Address</mat-card></th>
+                <th><mat-card>Contact Person</mat-card></th>
+                <th><mat-card>Mobile Number</mat-card></th>
             </tr>
         </thead>
         <tbody>
             <tr *ngFor="let bed of beds">
-                <td>{{bed.bedType}}</td>
-                <td>{{bed.city}}</td>
-                <td>{{bed.address}}</td>
-                <td>{{bed.contactPerson}}</td>
-                <td>{{bed.mobileNumber}}</td>
-                <td><button class="btn btn-danger" (click)="deleteBed(bed)">Delete Bed</button></td>
+                <td><mat-card>{{bed.bedType}}</mat-card></td>
+                <td><mat-card>{{bed.city}}</mat-card></td>
+                <td><mat-card>{{bed.address}}</mat-card></td>
+                <td><mat-card>{{bed.contactPerson}}</mat-card></td>
+                <td><mat-card>{{bed.mobileNumber}}</mat-card></td>
+                <td><mat-card><button class="btn btn-danger" (click)="deleteBed(bed)">Delete Bed</button></mat-card></td>
             </tr>
         </tbody>
     </table>
