--- a/product-webapp/webapp/src/app/components/list-medicines/list-medicines.component.html
+++ b/product-webapp/webapp/src/app/components/list-medicines/list-medicines.component.html
@@ -1,26 +1,28 @@
-<h2>List Medicines... </h2>
+<div class="container">
+  <mat-card><h2>List Medicines... </h2> </mat-card>
 <div class="col-md-4">
     <table class="table table-striped">
         <thead>
             <tr>
-                <th>City</th>
-                <th>Name</th>
-                <th>Pharmacy</th>
-                <th>Address</th>
-                <th>Contact Person</th>
-                <th>Mobile Number</th>
+                <th><mat-card>City</mat-card></th>
+                <th><mat-card>Name</mat-card></th>
+                <th><mat-card>Pharmacy</mat-card></th>
+                <th><mat-card>Address</mat-card></th>
+                <th><mat-card>Contact Person</mat-card></th>
+                <th><mat-card>Mobile Number</mat-card></th>
             </tr>
         </thead>
         <tbody>
             <tr *ngFor="let medicine of medicines">
-                <td>{{medicine.city}}</td>
-                <td>{{medicine.medName}}</td>
-                <td>{{medicine.pharmacy}}</td>
-                <td>{{medicine.address}}</td>
-                <td>{{medicine.contactPerson}}</td>
-                <td>{{medicine.mobileNumber}}</td>
-                <td><button class="btn btn-danger" (click)="deleteMedicine(medicine)">Delete Medicine</button></td>
+                <td><mat-card>{{medicine.city}}</mat-card></td>
+                <td><mat-card>{{medicine.medName}}</mat-card></td>
+                <td><mat-card>{{medicine.pharmacy}}</mat-card></td>
+                <td><mat-card>{{medicine.address}}</mat-card></td>
+                <td><mat-card>{{medicine.contactPerson}}</mat-card></td>
+                <td><mat-card>{{medicine.mobileNumber}}</mat-card></td>
+                <td><mat-card><button class="btn btn-danger" (click)="deleteMedicine(medicine)">Delete Medicine</button></mat-card></td>
             </tr>
         </tbody>
     </table>
+</div>
 </div>
