--- a/product-webapp/webapp/src/styles.css
+++ b/product-webapp/webapp/src/styles.css
@@ -3,3 +3,8 @@ body{
     margin: 0px;
     padding: auto;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+  background-color: green;
+}
