geting the updated code

--- a/product-webapp/webapp/src/app/components/sos-request/sos-request.component.html
+++ b/product-webapp/webapp/src/app/components/sos-request/sos-request.component.html
@@ -7,69 +7,97 @@
   <title>Document</title>
 </head>
 <body>
+  <mat-card>
   <div class='container' padding-top='20rem'>
-    <div class="form-group">
-      <label for="name">Paitent Name:</label>
-      <input type="name" [(ngModel)]="user.patientName" placeholder="Name" name="name" class="form-control" id="name">
-    </div>
+    <h1 style = "text-align: center;">
+      Raise an SOS Request
+    </h1>
+    <mat-card>
+      <div class="form-group">
+        <label for="name">Paitent Name:</label>
+        <input type="name" [(ngModel)]="user.patientName" placeholder="Name" name="name" class="form-control" id="name">
+      </div>
+    </mat-card>
 
-    <div class="form-group">
-      <label for="name">Phone Number:</label>
-      <input type="name" [(ngModel)]="user.phoneNo" placeholder="Phone Number" name="name" class="form-control" id="name">
-    </div>
+    <mat-card>
+      <div class="form-group">
+        <label for="name">Phone Number:</label>
+        <input type="name" [(ngModel)]="user.phoneNo" placeholder="Phone Number" name="phone number" class="form-control" id="name">
+      </div>
+    </mat-card>
 
-    <div class="form-group">
-      <label for="name">Email id.:</label>
-      <input type="email" [(ngModel)]="user.email" placeholder="Email id." name="name" class="form-control" id="name">
-    </div>
+    <mat-card>
+      <div class="form-group">
+        <label for="name">Email Id.:</label>
+        <input type="email" [(ngModel)]="user.email" placeholder="Email id." name="name" class="form-control" id="name">
+      </div>
+    </mat-card>
 
-    <div class="form-group">
-      <label for="name">City:</label>
-      <input type="name" [(ngModel)]="user.city" placeholder="City" name="name" class="form-control" id="name">
-    </div>
+    <mat-card>
+      <div class="form-group">
+        <label for="name">City:</label>
+        <input type="name" [(ngModel)]="user.city" placeholder="City" name="name" class="form-control" id="name">
+      </div>
+    </mat-card>
 
-    <div class="form-group">
-      <label for="name">Gender:</label>
-      <select class="form-select" [(ngModel)]="user.gender" aria-label="Default select example">
-        <option value="1">Male</option>
-        <option value="2">Female</option>
-      </select>
-    </div>
+    <mat-card>
+      <div class="form-group">
+        <label for="name">Gender:</label>
+        <select class="form-select" [(ngModel)]="user.gender" aria-label="Default select example">
+          <option value="1">Male</option>
+          <option value="2">Female</option>
+        </select>
+      </div>
+    </mat-card>
 
-    <div class="form-group">
-      <label for="name">Hospitalised status:</label>
-      <select class="form-select" [(ngModel)]="user.hospitalised" aria-label="Default select example">
-        <option value="1">Hospitalised</option>
-        <option value="2">Not Hospitalised</option>
-      </select>
-    </div>
+    <mat-card>
+      <div class="form-group">
+        <label for="name">Hospitalised status:</label>
+        <select class="form-select" [(ngModel)]="user.hospitalised" aria-label="Default select example">
+          <option value="1">Hospitalised</option>
+          <option value="2">Not Hospitalised</option>
+        </select>
+      </div>
+    </mat-card>
 
-    <div class="form-group">
-      <label for="name">Requrement Name:</label>
-      <input type="name" [(ngModel)]="user.requirementName" placeholder="Name" name="name" class="form-control" id="name">
-    </div>
+    <mat-card>
+      <div class="form-group">
+        <label for="name">Requrement Name:</label>
+        <input type="name" [(ngModel)]="user1.requirementName" placeholder="Name" name="name" class="form-control" id="name">
+      </div>
+    </mat-card>
 
-    <div class="form-group">
-      <label for="name">Requrement Quantity:</label>
-      <input type="name" [(ngModel)]="user.requirementQuantity" placeholder="Name" name="name" class="form-control" id="name">
-    </div>
+    <mat-card>
+      <div class="form-group">
+        <label for="name">Requrement Quantity:</label>
+        <input type="name" [(ngModel)]="user1.requirementQuantity" placeholder="Name" name="name" class="form-control" id="name">
+      </div>
+    </mat-card>
 
-    <div class="form-group">
-      <label for="name">Unit of Mesures:</label>
-      <input type="name" [(ngModel)]="user.unitOfMeasure" placeholder="Name" name="name" class="form-control" id="name">
-    </div>
+    <mat-card>
+      <div class="form-group">
+        <label for="name">Unit of Mesures:</label>
+        <input type="name" [(ngModel)]="user1.unitOfMeasure" placeholder="Name" name="name" class="form-control" id="name">
+      </div>
+    </mat-card>
 
-    <div class="form-group">
-      <label for="name">Request status:</label>
-      <select class="form-select" [(ngModel)]="user.requestStatus" aria-label="Default select example">
-        <option value="1">Open</option>
-        <option value="2">Close</option>
-      </select>
-    </div>
+    <mat-card>
+      <div class="form-group">
+        <label for="name">Request status:</label>
+        <select class="form-select" [(ngModel)]="user.requestStatus" aria-label="Default select example">
+          <option value="1">Open</option>
+          <option value="2">Close</option>
+        </select>
+      </div>
+    </mat-card>
 
 
-    <button type="button" class="btn btn-primary btn-lg" style="margin-top: 40px;" (click)="Create()">Submit</button>
+    <mat-card>
+      <button type="button" class="btn btn-primary btn-lg" style="align-items: center;" (click)="Create()">Submit</button>
+    </mat-card>
+
   </div>
+</mat-card>
 </body>
 </html>
 
