--- a/product-webapp/webapp/src/app/components/landing-page/latest-information/latest-information.component.html
+++ b/product-webapp/webapp/src/app/components/landing-page/latest-information/latest-information.component.html
@@ -24,6 +24,11 @@
     </table> -->
 <!-- </div> -->
 
+<!-- <mat-form-field appearance="standard">
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+</mat-form-field> -->
+
 <div class="mat-elevation-z8">
     <table mat-table [dataSource]="locationStat">
         <ng-container matColumnDef="Location">
