getting current changes

--- a/product-webapp/webapp/src/app/components/header/header.component.html
+++ b/product-webapp/webapp/src/app/components/header/header.component.html
@@ -26,7 +26,23 @@
   <nav class="navbar navbar-light" style="background-color: burlywood;">
     <div class="container-fluid">
       <a class="navbar-brand">Kawach</a>
-      <input type="button" class="btn btn-primary" value="Login" routerLink="/login">
-  
+      <div *ngIf="router.url === '/'">
+        <input type="button" class="btn btn-primary" value="Login" routerLink="/login">
+      </div>
+      <div class="Container" *ngIf="router.url === '/login'">
+        <input type="button" class="btn btn-primary" value="Doctor Register Here" routerLink="/doctorregistration">
+        <input type="button" class="btn btn-primary" value="Volunteer Register Here" routerLink="/volunteerregistration">
+      </div>
+      <div *ngIf="router.url === '/doctorregistration'">
+        <input type="button" class="btn btn-primary" value="Login" routerLink="/login">
+        <input type="button" class="btn btn-primary" value="Login" routerLink="/doctorregistration">
+        <input type="button" class="btn btn-primary" value="Login" routerLink="/volunteerregistration">
+      </div>
+      <div *ngIf="router.url === '/volunteerregistration'">
+        <input type="button" class="btn btn-primary" value="Login" routerLink="/login">
+        <input type="button" class="btn btn-primary" value="Login" routerLink="/doctorregistration">
+        <input type="button" class="btn btn-primary" value="Login" routerLink="/volunteerregistration">
+      </div>
+     
     </div>
   </nav>
