--- a/product-webapp/webapp/src/app/components/header/header.component.html
+++ b/product-webapp/webapp/src/app/components/header/header.component.html
@@ -25,7 +25,7 @@
 
   <nav class="navbar navbar-light" style="background-color: burlywood;">
     <div class="container-fluid">
-      <a class="navbar-brand">Kawach</a>
+      <a class="navbar-brand" href="#">Kawach</a>
       <div *ngIf="router.url === '/'">
         <input type="button" class="btn btn-primary" value="Login" routerLink="/login">
       </div>
@@ -33,15 +33,13 @@
         <input type="button" class="btn btn-primary" value="Doctor Register Here" routerLink="/doctorregistration">
         <input type="button" class="btn btn-primary" value="Volunteer Register Here" routerLink="/volunteerregistration">
       </div>
-      <div *ngIf="router.url === '/doctorregistration'">
+      <div class="Container" *ngIf="router.url === '/doctorregistration'">
         <input type="button" class="btn btn-primary" value="Login" routerLink="/login">
-        <input type="button" class="btn btn-primary" value="Login" routerLink="/doctorregistration">
-        <input type="button" class="btn btn-primary" value="Login" routerLink="/volunteerregistration">
+        <input type="button" class="btn btn-primary" value="Volunteer Register Here" routerLink="/volunteerregistration">
       </div>
-      <div *ngIf="router.url === '/volunteerregistration'">
+      <div class="Container" *ngIf="router.url === '/volunteerregistration'">
         <input type="button" class="btn btn-primary" value="Login" routerLink="/login">
-        <input type="button" class="btn btn-primary" value="Login" routerLink="/doctorregistration">
-        <input type="button" class="btn btn-primary" value="Login" routerLink="/volunteerregistration">
+        <input type="button" class="btn btn-primary" value="Doctor Register Here" routerLink="/doctorregistration">
       </div>
      
     </div>
