ui upgrade and form validation

--- a/product-webapp/webapp/src/app/components/add-bed/add-bed.component.html
+++ b/product-webapp/webapp/src/app/components/add-bed/add-bed.component.html
@@ -5,12 +5,12 @@
         <mat-card>
         <div class="form-group">
           <label for="bedType">Bed Type:</label>
-          <input type="name" [(ngModel)]="user.bedType" placeholder="Bed Type" name="bedType" class="form-control" id="bedType">
+          <input [(ngModel)]="user.bedType" placeholder="Bed Type" name="bedType" class="form-control" id="bedType">
         </div>
       </mat-card>
       <mat-card>
         <div class="form-group">
-          <label for="city">City</label>
+          <label for="city">City:</label>
           <input [(ngModel)]="user.city" placeholder="City Name" name="city" class="form-control" id="city">
         </div>
       </mat-card>
@@ -22,14 +22,14 @@
       </mat-card>
       <mat-card>
         <div class="form-group">
-          <label for="address">Contact Person:</label>
-          <input type="name" [(ngModel)]="user.contactPerson" placeholder="Contact Person" name="contactPerson" class="form-control" id="contactPerson">
+          <label for="contactPerson">Contact Person:</label>
+          <input [(ngModel)]="user.contactPerson" placeholder="Contact Person" name="contactPerson" class="form-control" id="contactPerson">
         </div>
       </mat-card>
       <mat-card>
         <div class="form-group">
           <label for="mobileNumber">Mobile Number:</label>
-          <input type="name" [(ngModel)]="user.mobileNumber" placeholder="Mobile Number" name="mobileNumber" class="form-control" id="mobileNumber">
+          <input [(ngModel)]="user.mobileNumber" placeholder="Mobile Number" name="mobileNumber" class="form-control" id="mobileNumber">
         </div>
       </mat-card>
       <mat-card>
