--- a/product-webapp/webapp/src/app/components/add-equipment/add-equipment.component.html
+++ b/product-webapp/webapp/src/app/components/add-equipment/add-equipment.component.html
@@ -17,7 +17,7 @@
       </mat-card>
       <mat-card>
       <div class="form-group">
-        <label for="city">City</label>
+        <label for="city">City:</label>
         <input [(ngModel)]="user.city" placeholder="City Name" name="city" class="form-control" id="city">
       </div>
       </mat-card>
