--- a/product-webapp/webapp/src/app/components/add-medicine/add-medicine.component.html
+++ b/product-webapp/webapp/src/app/components/add-medicine/add-medicine.component.html
@@ -18,26 +18,26 @@
     </mat-card>
     <mat-card>
       <div class="form-group">
-        <label for="medicineId">City</label>
-        <input [(ngModel)]="user.city" placeholder="City Name" name="city" class="form-control" id="medicineId">
+        <label for="city">City:</label>
+        <input [(ngModel)]="user.city" placeholder="City Name" name="city" class="form-control" id="city">
       </div>
     </mat-card>
     <mat-card>
       <div class="form-group">
-        <label for="name">Address:</label>
+        <label for="address">Address:</label>
         <input type="name" [(ngModel)]="user.address" placeholder="Address" name="address" class="form-control" id="address">
       </div>
     </mat-card>
     <mat-card>
       <div class="form-group">
-        <label for="name">Contact Person:</label>
+        <label for="contactPerson">Contact Person:</label>
         <input type="name" [(ngModel)]="user.contactPerson" placeholder="Contact Person" name="contactPerson" class="form-control" id="contactPerson">
       </div>
     </mat-card>
     <mat-card>
       <div class="form-group">
-        <label for="name">Mobile Number:</label>
-        <input type="name" [(ngModel)]="user.mobileNumber" placeholder="Mobile Number" name="mobileNumber" class="form-control" id="mobileNumber">
+        <label for="mobileNumber">Mobile Number:</label>
+        <input type="number" [(ngModel)]="user.mobileNumber" placeholder="Mobile Number" name="mobileNumber" class="form-control" id="mobileNumber">
       </div>
     </mat-card>
     <mat-card>
