--- a/product-webapp/webapp/src/app/components/sos-request/sos-request.component.html
+++ b/product-webapp/webapp/src/app/components/sos-request/sos-request.component.html
@@ -15,35 +15,55 @@
     <mat-card>
       <div class="form-group">
         <label for="name">Paitent Name:</label>
-        <input type="name" [(ngModel)]="user.patientName" placeholder="Name" name="name" class="form-control" id="name">
+        <input type="text" id="name" name="name" class="form-control"
+        required minlength="4" appForbiddenName="bob"
+        [(ngModel)]="user.patientName" #name="ngModel">
+
+        <div *ngIf="name.invalid && (name.dirty || name.touched)"
+          class="alert">
+
+          <div *ngIf="name.errors?.required">
+            Name is required.
+          </div>
+        </div>
       </div>
     </mat-card>
 
     <mat-card>
       <div class="form-group">
         <label for="name">Phone Number:</label>
-        <input type="name" [(ngModel)]="user.phoneNo" placeholder="Phone Number" name="phone number" class="form-control" id="name">
+        <input type="text" id="name" name="name" class="form-control"
+        required minlength="4" appForbiddenName="bob"
+        [(ngModel)]="user.phoneNo" #name="ngModel">
+
+        <div *ngIf="name.invalid && (name.dirty || name.touched)"
+          class="alert">
+
+          <div *ngIf="name.errors?.required">
+            phone number is required.
+          </div>
+        </div>
       </div>
     </mat-card>
 
     <mat-card>
       <div class="form-group">
         <label for="name">Email Id.:</label>
-        <input type="email" [(ngModel)]="user.email" placeholder="Email id." name="name" class="form-control" id="name">
+        <input type="email" [(ngModel)]="user.email" placeholder="Email id." name="name" class="form-control" id="name" required>
       </div>
     </mat-card>
 
     <mat-card>
       <div class="form-group">
         <label for="name">City:</label>
-        <input type="name" [(ngModel)]="user.city" placeholder="City" name="name" class="form-control" id="name">
+        <input type="name" [(ngModel)]="user.city" placeholder="City" name="name" class="form-control" id="name" required>
       </div>
     </mat-card>
 
     <mat-card>
       <div class="form-group">
         <label for="name">Gender:</label>
-        <select class="form-select" [(ngModel)]="user.gender" aria-label="Default select example">
+        <select class="form-select" [(ngModel)]="user.gender" aria-label="Default select example" required>
           <option value="1">Male</option>
           <option value="2">Female</option>
         </select>
@@ -53,7 +73,7 @@
     <mat-card>
       <div class="form-group">
         <label for="name">Hospitalised status:</label>
-        <select class="form-select" [(ngModel)]="user.hospitalised" aria-label="Default select example">
+        <select class="form-select" [(ngModel)]="user.hospitalised" aria-label="Default select example" required>
           <option value="1">Hospitalised</option>
           <option value="2">Not Hospitalised</option>
         </select>
@@ -63,28 +83,28 @@
     <mat-card>
       <div class="form-group">
         <label for="name">Requrement Name:</label>
-        <input type="name" [(ngModel)]="user1.requirementName" placeholder="Name" name="name" class="form-control" id="name">
+        <input type="name" [(ngModel)]="user1.requirementName" placeholder="Name" name="name" class="form-control" id="name" required>
       </div>
     </mat-card>
 
     <mat-card>
       <div class="form-group">
         <label for="name">Requrement Quantity:</label>
-        <input type="name" [(ngModel)]="user1.requirementQuantity" placeholder="Name" name="name" class="form-control" id="name">
+        <input type="name" [(ngModel)]="user1.requirementQuantity" placeholder="Name" name="name" class="form-control" id="name" required>
       </div>
     </mat-card>
 
     <mat-card>
       <div class="form-group">
         <label for="name">Unit of Mesures:</label>
-        <input type="name" [(ngModel)]="user1.unitOfMeasure" placeholder="Name" name="name" class="form-control" id="name">
+        <input type="name" [(ngModel)]="user1.unitOfMeasure" placeholder="Name" name="name" class="form-control" id="name" required>
       </div>
     </mat-card>
 
     <mat-card>
       <div class="form-group">
         <label for="name">Request status:</label>
-        <select class="form-select" [(ngModel)]="user.requestStatus" aria-label="Default select example">
+        <select class="form-select" [(ngModel)]="user.requestStatus" aria-label="Default select example" required>
           <option value="1">Open</option>
           <option value="2">Close</option>
         </select>
