UI implementation login war room

--- a/product-webapp/webapp/src/app/components/header/header.component.html
+++ b/product-webapp/webapp/src/app/components/header/header.component.html
@@ -16,7 +16,7 @@
             <button type="button" class="btn btn-outline-primary" routerLink="volunteerregistration">Volunteer Register</button>
           </li>
           <li class="nav-item">
-            <input type="button" class="btn btn-primary" value="Login" routerLink="/login" style="float: right;" >
+            <button type="button" class="btn btn-primary" routerLink="login" >Login </button>
           </li>
         </ul>
       </div>
