--- a/product-webapp/webapp/src/app/components/login/login.component.html
+++ b/product-webapp/webapp/src/app/components/login/login.component.html
@@ -1,23 +1,25 @@
-<h2>Login</h2>  
+<div class="mat-display-1" style="text-align: center; 
+margin-top: 20px;" color="accent">Login</div>
 
-<div class="col-md-4">
-<form>  
+<div>
   
-  <div class="form-group">  
-        <label for="email"> Email ID: </label>  
-        <input [(ngModel)]="userobj.id" name="email" class="form-control" type="text" >   
+  <div class="form-group" style="text-align: center;">  
+          
+        <mat-form-field appearance="fill" color="accent">
+          <mat-label floatLabel="auto"> Email ID: </mat-label>
+        <input matInput [(ngModel)]="userobj.id" name="email" class="form-control" type="text" >   
+      </mat-form-field>
   </div>  
-  
-  <div class="row">  
-        <label for="password"> Password: </label>  
-        <input [(ngModel)]="userobj.password" name="password" class="form-control" type="password" >   
+  <div class="row" class="" style="text-align: center;">  
+          
+        <mat-form-field appearance="fill" color="accent">
+          <mat-label for="password"> Password: </mat-label>
+        <input matInput [(ngModel)]="userobj.password" name="password" class="form-control" type="password" > 
+      </mat-form-field>  
   </div>  
-  
-  <div class="row" style="margin-top: 40px;">  
-    <div class="col-md-offset-1 col-md-4">  
-        <button class="btn btn-md btn-primary btn-style" (click)=login() >Login</button>  
+  <div class="row" style="margin-top: 20px; text-align: center;">  
+    <div class="col-md-offset-1">  
+        <button mat-raised-button color="accent" class="btn btn-md btn-primary btn-style" (click)=login() >Login</button>  
     </div>  
   </div>  
-  
-</form>  
 </div>
