--- a/product-webapp/webapp/src/app/components/volunteer-registration/volunteer-registration.component.css
+++ b/product-webapp/webapp/src/app/components/volunteer-registration/volunteer-registration.component.css
@@ -9,3 +9,25 @@ table,form{
     margin-right: auto;
 }
 
+/* .mat-form-field {
+    margin-right: 12px;
+  } */
+
+.example-container .mat-form-field + .mat-form-field {
+    margin-left: 8px;
+}
+
+.mat-slider {
+    width: 300px;
+  }
+/* mat-card {text-align: center}
+mat-card-title{text-align: center} */
+
+.form-container{
+    margin: 0 auto;
+    width: 0px auto;
+}
+.button{
+    top:10%;
+    right: 10%;
+}
