--- a/product-webapp/webapp/src/app/components/volunteer-registration/volunteer-registration.component.css
+++ b/product-webapp/webapp/src/app/components/volunteer-registration/volunteer-registration.component.css
@@ -26,8 +26,14 @@ mat-card-title{text-align: center} */
 .form-container{
     margin: 0 auto;
     width: 0px auto;
+    margin-top: 20px;
 }
 .button{
     top:10%;
     right: 10%;
+}
+
+form{
+    display: flex;
+  justify-content: center;
 }
