--- a/product-webapp/webapp/src/app/components/doctor-registration/doctor-registration.component.css
+++ b/product-webapp/webapp/src/app/components/doctor-registration/doctor-registration.component.css
@@ -3,8 +3,19 @@
     padding: 10em;
 }
 
-table,form{
+/* table,form{
     width: 40%;
     margin-left: auto;
     margin-right: auto;
+} */
+
+form{
+    display: flex;
+  justify-content: center;
+}
+
+.form-container{
+    /* margin: 0 auto;
+    width: 0px auto; */
+    margin-top: 20px;
 }
