war room UI design

--- a/product-webapp/webapp/src/app/components/header/header.component.html
+++ b/product-webapp/webapp/src/app/components/header/header.component.html
@@ -23,7 +23,7 @@
     </div>
   </nav> -->
 
-  <nav class="navbar navbar-light" style="background-color: burlywood;">
+  <nav class="navbar navbar-light" style="background-color: pink;">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Kawach</a>
       <div *ngIf="router.url === '/'">
