--- a/product-webapp/webapp/src/app/components/warroom-dashboard/warroom-dashboard.component.html
+++ b/product-webapp/webapp/src/app/components/warroom-dashboard/warroom-dashboard.component.html
@@ -1,28 +1,25 @@
 <h1 style="text-align:center">War Room Dashboard</h1>
-<mat-grid-list cols="3" >
-    <mat-grid-tile rowHeight= "40px">
-        <button mat-raised-button color="accent" (click)="routeTo('sos')"> SOS</button>
+<mat-grid-list cols="3" rowHeight= "4:1">
+    <mat-grid-tile >
+        <button mat-raised-button color="primary" (click)="routeTo('sos')">Medical SOS</button>
     </mat-grid-tile>
-    <mat-grid-tile rowHeight= "40px">
-        <button mat-raised-button color="accent"  (click)="routeTo('Verification')"> Verification</button>
+    <mat-grid-tile>
+        <button mat-raised-button color="primary"  (click)="routeTo('Verification')"> Verification</button>
     </mat-grid-tile>
     <mat-grid-tile >
-        <mat-expansion-panel>
-            <mat-expansion-panel-header color="accent">
-                <mat-panel-title color="accent">
+                <button mat-raised-button color="primary" routerLink="/war-room-add">
                     Add Resources
-                </mat-panel-title>
-            </mat-expansion-panel-header>
+                </button>
+                <!--
             <mat-action-row>
-            <button mat-raised-button color="accent" (click)="routeTo('Medicine')"> Medicine</button>
+            <button mat-raised-button color="primary" (click)="routeTo('Medicine')"> Medicine</button>
             </mat-action-row>
             <mat-action-row>
-            <button mat-raised-button color="accent" (click)="routeTo('Equipment')"> Medical Equipment</button>
+            <button mat-raised-button color="primary" (click)="routeTo('Equipment')"> Medical Equipment</button>
             </mat-action-row>
             <mat-action-row>
-            <button mat-raised-button color="accent" class="btn btn-md btn-primary btn-style" (click)="routeTo('Bed')"> Bed</button>
-            </mat-action-row>
-        </mat-expansion-panel>
+            <button mat-raised-button color="primary" class="btn btn-md btn-primary btn-style" (click)="routeTo('Bed')"> Bed</button>
+            </mat-action-row>-->
     </mat-grid-tile>
 
 </mat-grid-list>
