--- a/product-webapp/webapp/src/app/components/header/header.component.html
+++ b/product-webapp/webapp/src/app/components/header/header.component.html
@@ -25,7 +25,11 @@
 
   <nav class="navbar navbar-light" style="background-color: burlywood;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Kawach</a>
+      <!-- <a class="navbar-brand" href="#"><img src="/logopng.png"></a>
+       -->
+       <a class="navbar-brand font" href="#">
+        <img src="/assets/logopng.png" width="150" height="60" class="d-inline-block" alt="">
+    </a>
       <div *ngIf="router.url === '/'">
         <input type="button" class="btn btn-primary" value="Login" routerLink="/login">
       </div>
