--- a/product-webapp/webapp/src/app/components/landing-page/landing-page.component.html
+++ b/product-webapp/webapp/src/app/components/landing-page/landing-page.component.html
@@ -4,6 +4,7 @@
 
 <div class="container">
   <app-patient-otp></app-patient-otp>
+  <app-grid></app-grid>
   <app-latest-information></app-latest-information>
 <div class="container">
 
