--- a/product-webapp/webapp/src/app/components/header/header.component.css
+++ b/product-webapp/webapp/src/app/components/header/header.component.css
@@ -23,7 +23,15 @@ body{
     transition: 0.2s linear;
     top: 0px;
     z-index: 998;
-    
+}
+
+.nav1{
+    background-color: white;
+    border-bottom: 2px solid #4154F1;
+    -webkit-box-shadow: 0 4px 6px -6px #4154F1;
+    -moz-box-shadow: 0 4px 6px -6px #4154F1;
+    box-shadow: 0 2px 6px -6px #4154F1;
+    /* height: 70px; */
 }
 
 .nofixed {
@@ -32,6 +40,9 @@ body{
     top: -50px;
     z-index: 998;
 }
+
+.navbar-nav > li > a {padding-top:5px !important; padding-bottom:5px !important;}
+.navbar {min-height:15px !important}
 
 /* .navbar navbar-light, .container-fluid{
     position: fixed;
