--- a/product-webapp/webapp/src/app/components/header/header.component.html
+++ b/product-webapp/webapp/src/app/components/header/header.component.html
@@ -23,29 +23,29 @@
     </div>
   </nav> -->
   
-  <nav class="navbar navbar-light" style="background-color: cornflowerblue;" (scroll)="onscroll()" [ngClass]="navbarfixed?'fixed':'nofixed'">
-    <div class="container-fluid">
-      <!-- <a class="navbar-brand" href="#"><img src="/logopng.png"></a>
-       -->
+  <nav class="navbar navbar-light nav1" (scroll)="onscroll()" [ngClass]="navbarfixed?'fixed':'nofixed'">
+    
+  <!-- <nav class="navbar navbar-light fixed-top nav1"> -->
+    <div class="container-fluid" pb-3>
        <a class="navbar-brand font" href="#">
         <img src="/assets/logopng.png" width="150" height="60" class="d-inline-block" alt="">
     </a>
       <div class = "Container" *ngIf="router.url === '/'">
+        <input type="button" class="btn btn-primary" value="Doctor Register" routerLink="/doctorregistration">
+        <input type="button" class="btn btn-primary" value="Volunteer Register" routerLink="/volunteerregistration">
         <input type="button" class="btn btn-primary" value="Login" routerLink="/login">
-        <input type="button" class="btn btn-primary" value="Doctor Register Here" routerLink="/doctorregistration">
-        <input type="button" class="btn btn-primary" value="Volunteer Register Here" routerLink="/volunteerregistration">
       </div>
       <div class="Container" *ngIf="router.url === '/login'">
-        <input type="button" class="btn btn-primary" value="Doctor Register Here" routerLink="/doctorregistration">
-        <input type="button" class="btn btn-primary" value="Volunteer Register Here" routerLink="/volunteerregistration">
+        <input type="button" class="btn btn-primary" value="Doctor Register" routerLink="/doctorregistration">
+        <input type="button" class="btn btn-primary" value="Volunteer Register" routerLink="/volunteerregistration">
       </div>
       <div class="Container" *ngIf="router.url === '/doctorregistration'">
         <input type="button" class="btn btn-primary" value="Login" routerLink="/login">
-        <input type="button" class="btn btn-primary" value="Volunteer Register Here" routerLink="/volunteerregistration">
+        <input type="button" class="btn btn-primary" value="Volunteer Register" routerLink="/volunteerregistration">
       </div>
       <div class="Container" *ngIf="router.url === '/volunteerregistration'">
         <input type="button" class="btn btn-primary" value="Login" routerLink="/login">
-        <input type="button" class="btn btn-primary" value="Doctor Register Here" routerLink="/doctorregistration">
+        <input type="button" class="btn btn-primary" value="Doctor Register" routerLink="/doctorregistration">
       </div>
      
     </div>
