--- a/product-webapp/webapp/src/app/components/landing-page/grid/doctor-card/doctor-card.component.html
+++ b/product-webapp/webapp/src/app/components/landing-page/grid/doctor-card/doctor-card.component.html
@@ -11,6 +11,6 @@
     </p>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button>Become our Doctor</button>
+    <button mat-button routerLink="/doctorregistration">Become our Doctor</button>
   </mat-card-actions>
 </mat-card>
