--- a/product-webapp/webapp/src/app/components/landing-page/grid/grid.component.html
+++ b/product-webapp/webapp/src/app/components/landing-page/grid/grid.component.html
@@ -1,5 +1,7 @@
-<mat-grid-list [cols]="6" rowHeight="8rem">
-    <mat-grid-tile [colspan]="3" [rowspan]="4"><app-doctor-card></app-doctor-card></mat-grid-tile>
+<div class="cards">
+<mat-grid-list  [cols]="6" rowHeight="8rem" [gutterSize]="'50px'">
+    <mat-grid-tile [colspan]="3" [rowspan]="4" style="margin-right: 16px;"><app-doctor-card></app-doctor-card></mat-grid-tile>
     <!-- <mat-grid-tile><app-patient-card></app-patient-card>></mat-grid-tile> -->
     <mat-grid-tile [colspan]="3" [rowspan]="4"><app-volunteer-card></app-volunteer-card></mat-grid-tile>
-  </mat-grid-list>
+</mat-grid-list>
+</div>
