--- a/product-webapp/webapp/src/app/components/landing-page/grid/volunteer-card/volunteer-card.component.html
+++ b/product-webapp/webapp/src/app/components/landing-page/grid/volunteer-card/volunteer-card.component.html
@@ -1,7 +1,7 @@
 <mat-card class="example-card">
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>Volunteers</mat-card-title>
+      <mat-card-title>VOLUNTEERS</mat-card-title>
       <mat-card-subtitle>Corona Warriors</mat-card-subtitle>
     </mat-card-header>
     <img mat-card-image src="/assets/volunteers.jpg" alt="Photo of a Shiba Inu">
@@ -11,7 +11,7 @@
       </p>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button>Become our volunteer</button>
+      <button mat-button routerLink="/volunteerregistration">Become our volunteer</button>
     </mat-card-actions>
   </mat-card>
   
