Integrated Medical SOS request  backend with close-sos component. Added service to close-sos component. Rendering output remaining

--- a/product-webapp/webapp/src/app/components/close-sos/close-sos.component.html
+++ b/product-webapp/webapp/src/app/components/close-sos/close-sos.component.html
@@ -5,4 +5,15 @@
 <button mat-raised-button color="accent"> BEDS </button>
 <br>
 
+{{closeSos.patientName}}
+{{closeSos.phoneNo}}
+{{closeSos.gender}}
+{{closeSos.email}}
+{{closeSos.hospitalised}}
+{{closeSos.city}}
+{{closeSos.requir[0]}}
+{{closeSos.requir[1]}}
+{{closeSos.requir[2]}}
+{{closeSos.requestStatus}}
+
 ###############################################################
